<resources>
    <string name="app_name">BTPN POC</string>
    <string name="action_settings">Settings</string>
    <string name="username_error">Username not found</string>
    <string name="password_error">Password should not be empty</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username_dummy">nineleaps</string>
    <string name="password_dummy">nineleaps</string>
</resources>
