<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="80dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/username_layout">

        <android.support.design.widget.TextInputEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/username"
            android:hint="@string/username"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/password_layout">
        <android.support.design.widget.TextInputEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="HardcodedText" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:onClick="onLoginClicked"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:layout_margin="10dp"
        android:text="@string/login"/>

</LinearLayout>